--- a/Api/ToDoAppApi/appsettings.json
+++ b/Api/ToDoAppApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlConnection": "server=LAKSHMANAN\\LAXDB; database=Practice; Integrated Security=true;encrypt=false"
+    "SqlConnection": "server=.; database=ToDoApp; Integrated Security=true;encrypt=false"
   }
 }
